Update index.html and package.json

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
       </div>
     </div>
     <div id="root" />
-    <script src="./vendor.bundle.js"></script>
-    <script src="./bundle.js"></script>
+    <script src="./vendor.bundle.2.js"></script>
+    <script src="./bundle.2.js"></script>
     <script src="https://use.typekit.net/ckp5jxu.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
     <noscript>
